<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.lamusique.playLists">

    <TextView
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playLists" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/add"
        android:text="+" />

    <TextView
        style="@style/MenuStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="play1"
        android:text="@string/play1" />

    <TextView
        style="@style/MenuStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="play2"
        android:text="@string/play2" />

    <TextView
        style="@style/MenuStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="play3"
        android:text="@string/play3" />

    <Button
        android:id="@+id/nowPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1" />

    <Button
        android:id="@+id/songDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2" />

    <Button
        android:id="@+id/musicLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text3" />
</LinearLayout>
