<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.lamusique.payment">

    <TextView
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment" />

    <TextView
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="songName"
        android:text="Song name:" />

    <TextView
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="artistName"
        android:text="Artist name:" />

    <TextView
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="albumName"
        android:text="Album name:" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buy"
        android:text="@string/buy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/net"
            android:text="@string/pay1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card"
            android:text="@string/pay2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/paytm"
            android:text="@string/pay3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/nowPlaying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1" />

        <Button
            android:id="@+id/musicLibrary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text3" />

        <Button
            android:id="@+id/playLists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text4" />
    </LinearLayout>
</LinearLayout>
