<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.lamusique.nowPlaying">

    <TextView
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nowPlaying" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="stop"
            android:src="@drawable/stop" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="pause"
            android:src="@drawable/pause" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="previous"
            android:src="@drawable/previous" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="play"
            android:src="@drawable/play" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="next"
            android:src="@drawable/next" />
    </LinearLayout>

    <Button
        android:id="@+id/musicLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text3" />

    <Button
        android:id="@+id/songDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2" />

    <Button
        android:id="@+id/playLists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text4" />
</LinearLayout>